Bug 1319971: Re-work some static_asserts to get VS2017 compiling. r=luke

VS2017 doesn't consider functions like Foo::offsetOfBar() to be constexpr, so it refuses to allow them in static_asserts.

MozReview-Commit-ID: 3mYgnmEPIx0

--HG--
extra : rebase_source : b7392c054d48068587ae9be7f014ad1c0d4c39a3